tests/ui/closures/2229_closure_analysis/diagnostics/closure-origin-tuple-diagnostics.stderr
error[E0277]: expected a `Fn()` closure, found `{closure@$DIR/closure-origin-tuple-diagnostics.rs:9:13: 9:15}`
  --> $DIR/closure-origin-tuple-diagnostics.rs:12:15
   |
LL |     expect_fn(c);
   |     --------- ^ expected an `Fn()` closure, found `{closure@$DIR/closure-origin-tuple-diagnostics.rs:9:13: 9:15}`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Fn<()>` is not implemented for closure `{closure@$DIR/closure-origin-tuple-diagnostics.rs:9:13: 9:15}`
   = note: wrap the `{closure@$DIR/closure-origin-tuple-diagnostics.rs:9:13: 9:15}` in a closure with no arguments: `|| { /* code */ }`
   = note: `{closure@$DIR/closure-origin-tuple-diagnostics.rs:9:13: 9:15}` implements `FnOnce`, but it must implement `Fn`, which is more general
note: required by a bound in `expect_fn`
  --> $DIR/closure-origin-tuple-diagnostics.rs:5:17
   |
LL | fn expect_fn<F: Fn()>(_f: F) {}
   |                 ^^^^ required by this bound in `expect_fn`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
